created and briefly styled my index.html

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Webpage</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Odin-Recipes</h1>
-    <a href="recipes/bananaPeelBaconStrips.html">Banana Peel Bacon Strips</a>
-    <a href="recipes/unicornPoopCupcakes.html">Unicorn Poop Cupcakes</a>
-    <a href="recipes/alienInvasionTacos.html"> Alien Invasion Tacos</a>
+        <ul>
+            <li><a href="recipes/bananaPeelBaconStrips.html">Banana Peel Bacon Strips</a></li>
+            <li><a href="recipes/unicornPoopCupcakes.html">Unicorn Poop Cupcakes</a></li>
+            <li><a href="recipes/alienInvasionTacos.html"> Alien Invasion Tacos</a></li>
+        </ul>
 </body>
 </html>
